# Jacobi

./: CMakeLists.txt  main.cpp  main.h  matrix.cpp  matrix.h  thread.cpp  thread.h
